<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="22dp"
    android:paddingEnd="22dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/curved_solid_white"
        android:orientation="vertical"
        android:paddingStart="22dp"
        android:paddingTop="60dp"
        android:paddingEnd="22dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/grade"
            style="@style/RobotoMediumStyle"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/student_grade_edittext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/curved_cool_grey"
            android:hint="@string/enter_grade"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/feedback"
            style="@style/RobotoMediumStyle"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/student_feedback_edittext"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/curved_cool_grey"
            android:gravity="start"
            android:hint="@string/write_a_feedback"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxHeight="104dp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="86dp"
            android:layout_marginEnd="86dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/curved_solid_cerulean_blue"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:padding="20dp"
        android:background="@drawable/curvo"
        android:tint="@color/white"
        android:src="@drawable/grades" />
</FrameLayout>