<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:id="@+id/card_view"
    app:cardCornerRadius="25dp"
    app:cardElevation="3dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/error_dialog_drawable"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingTop="20dp"
        android:paddingEnd="50dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/dialog_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/school_fees"
            android:textAllCaps="true"
            android:textColor="@color/dialog_black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/dialog_content_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato_regular"
            android:gravity="start"
            android:text="@string/no_fees"
            android:textAlignment="center"
            android:textColor="@color/dialog_black"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">


            <Button
                android:id="@+id/submit_btn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/curved_jade_green_25"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>


